--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Money" />
-    <link rel="icon" type="image/svg+xml" href="/money/favicon.ico" />
+    <link rel="icon" type="image/png" href="/money/favicon.png" />
     <link rel="apple-touch-icon" href="/money/apple-touch-icon.png" />
     <title>Money Tracker</title>
   </head>
